<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tsingkuo.johnny.firstjsq.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/tv_input"
        android:gravity="right|bottom"
        android:background="@drawable/white_bg"
        android:textColor="#000000"
        android:textSize="40dp"/>

    <LinearLayout
        android:layout_below="@+id/tv_input"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/firstLL"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/first_one"
                    android:id="@+id/btn_clear"
                    android:gravity="right|bottom"
                    android:textSize="30dp"
                    android:background="@drawable/white_selector"
                    android:textColor="#000000"
                    android:layout_margin="5dp"
                    android:padding="5dp"/>

                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/first_two"
                    android:id="@+id/btn_del"
                    android:gravity="right|bottom"
                    android:textSize="30dp"
                    android:background="@drawable/white_selector"
                    android:textColor="#000000"
                    android:layout_margin="5dp"
                    android:padding="5dp"/>

                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/first_three"
                    android:id="@+id/btn_divide"
                    android:gravity="right|bottom"
                    android:textSize="30dp"
                    android:background="@drawable/white_selector"
                    android:textColor="#000000"
                    android:layout_margin="5dp"
                    android:padding="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/second_one"
                    android:gravity="right|bottom"
                    android:id="@+id/btn_7"
                    android:textSize="30dp"
                    android:background="@drawable/white_selector"
                    android:textColor="#000000"
                    android:layout_margin="5dp"
                    android:padding="5dp"/>

                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/second_two"
                    android:gravity="right|bottom"
                    android:id="@+id/btn_8"
                    android:textSize="30dp"
                    android:background="@drawable/white_selector"
                    android:textColor="#000000"
                    android:layout_margin="5dp"
                    android:padding="5dp"/>

                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/second_three"
                    android:gravity="right|bottom"
                    android:id="@+id/btn_9"
                    android:textSize="30dp"
                    android:background="@drawable/white_selector"
                    android:textColor="#000000"
                    android:layout_margin="5dp"
                    android:padding="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/third_one"
                    android:gravity="right|bottom"
                    android:id="@+id/btn_4"
                    android:textSize="30dp"
                    android:background="@drawable/white_selector"
                    android:textColor="#000000"
                    android:layout_margin="5dp"
                    android:padding="5dp"/>

                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/third_two"
                    android:gravity="right|bottom"
                    android:id="@+id/btn_5"
                    android:textSize="30dp"
                    android:background="@drawable/white_selector"
                    android:textColor="#000000"
                    android:layout_margin="5dp"
                    android:padding="5dp"/>

                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/third_three"
                    android:gravity="right|bottom"
                    android:id="@+id/btn_6"
                    android:textSize="30dp"
                    android:background="@drawable/white_selector"
                    android:textColor="#000000"
                    android:layout_margin="5dp"
                    android:padding="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/fourth_one"
                    android:gravity="right|bottom"
                    android:id="@+id/btn_1"
                    android:textSize="30dp"
                    android:background="@drawable/white_selector"
                    android:textColor="#000000"
                    android:layout_margin="5dp"
                    android:padding="5dp"/>

                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/fourth_two"
                    android:gravity="right|bottom"
                    android:id="@+id/btn_2"
                    android:textSize="30dp"
                    android:background="@drawable/white_selector"
                    android:textColor="#000000"
                    android:layout_margin="5dp"
                    android:padding="5dp"/>

                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/fourth_three"
                    android:gravity="right|bottom"
                    android:id="@+id/btn_3"
                    android:textSize="30dp"
                    android:background="@drawable/white_selector"
                    android:textColor="#000000"
                    android:layout_margin="5dp"
                    android:padding="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/fifth_one"
                    android:gravity="right|bottom"
                    android:id="@+id/btn_0"
                    android:textSize="30dp"
                    android:background="@drawable/white_selector"
                    android:textColor="#000000"
                    android:layout_margin="5dp"
                    android:padding="5dp"/>

                <Button
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/fifth_three"
                    android:gravity="right|bottom"
                    android:id="@+id/btn_point"
                    android:textSize="30dp"
                    android:background="@drawable/white_selector"
                    android:textColor="#000000"
                    android:layout_margin="5dp"
                    android:padding="5dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondLL"
            android:layout_weight="3"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/first_four"
                android:id="@+id/btn_multiply"
                android:gravity="right|bottom"
                android:textSize="30dp"
                android:background="@drawable/white_selector"
                android:textColor="#000000"
                android:layout_margin="5dp"
                android:padding="5dp"/>

            <Button
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/second_four"
                android:gravity="right|bottom"
                android:id="@+id/btn_minus"
                android:textSize="30dp"
                android:background="@drawable/white_selector"
                android:textColor="#000000"
                android:layout_margin="5dp"
                android:padding="5dp"/>

            <Button
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/third_four"
                android:gravity="right|bottom"
                android:id="@+id/btn_plus"
                android:textSize="30dp"
                android:background="@drawable/white_selector"
                android:textColor="#000000"
                android:layout_margin="5dp"
                android:padding="5dp"/>

            <Button
                android:layout_weight="2.26"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fourth_four"
                android:gravity="right|bottom"
                android:id="@+id/btn_equal"
                android:textSize="30dp"
                android:background="@drawable/orange_selector"
                android:textColor="#000000"
                android:layout_margin="5dp"
                android:padding="5dp"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
